--- a/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
@@ -318,6 +318,7 @@
         <configuration>
 
           <skip>${integration.test.skip}</skip>
+          <summaryFile>${project.build.directory}/failsafe-reports/failsafe-summary.xml</summaryFile>
 
           <systemPropertyVariables>
             <fedora.authorize.access>true</fedora.authorize.access>
