integration tests ignore FEDORA_HOME, use -Dfedora.home

--- a/fcrepo-integrationtest/fcrepo-integrationtest-configB/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configB/pom.xml
@@ -53,10 +53,10 @@
     </profile>
 
     <profile>
-      <id>FEDORA_HOME-not-defined</id>
+      <id>fedora.home-not-defined</id>
       <activation>
         <property>
-          <name>!env.FEDORA_HOME</name>
+          <name>!fedora.home</name>
         </property>
       </activation>
       <properties>
@@ -116,14 +116,14 @@
     </profile>
 
     <profile>
-      <id>FEDORA_HOME-is-defined</id>
+      <id>fedora.home-is-defined</id>
       <activation>
         <property>
-          <name>env.FEDORA_HOME</name>
+          <name>fedora.home</name>
         </property>
       </activation>
       <properties>
-        <fedora.home>${env.FEDORA_HOME}</fedora.home>
+        <fedora.home>${fedora.home}</fedora.home>
       </properties>
     </profile>
 
@@ -340,6 +340,10 @@
             <org.apache.activemq.default.directory.prefix>${org.apache.activemq.default.directory.prefix}</org.apache.activemq.default.directory.prefix>
             <fcrepo-integrationtest-core.classes>${project.build.directory}/ext/fcrepo-integrationtest-core/test-classes/</fcrepo-integrationtest-core.classes>
           </systemPropertyVariables>
+
+          <environmentVariables>
+            <FEDORA_HOME>${fedora.home}</FEDORA_HOME>
+          </environmentVariables>
 
         </configuration>
       </plugin>
