set WEBAPP_NAME env when fedora.appServerContext is set

--- a/fcrepo-integrationtest/fcrepo-integrationtest-configQ/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configQ/pom.xml
@@ -337,6 +337,7 @@
 
           <environmentVariables>
             <FEDORA_HOME>${fedora.home}</FEDORA_HOME>
+            <WEBAPP_NAME>${fedora.appServerContext}</WEBAPP_NAME>
           </environmentVariables>
 
         </configuration>
