--- a/fcrepo-integrationtest/fcrepo-integrationtest-configA/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configA/pom.xml
@@ -345,6 +345,7 @@
           
           <environmentVariables>
             <FEDORA_HOME>${fedora.home}</FEDORA_HOME>
+            <WEBAPP_NAME>${fedora.appServerContext}</WEBAPP_NAME>
           </environmentVariables>
 
         </configuration>
