--- a/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
@@ -378,6 +378,7 @@
 
           <environmentVariables>
             <FEDORA_HOME>${fedora.home}</FEDORA_HOME>
+            <WEBAPP_NAME>${fedora.appServerContext}</WEBAPP_NAME>
           </environmentVariables>
 
         </configuration>
