--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -234,6 +234,32 @@
                             </includes>
                         </configuration>
                     </execution>
+                    
+                    <execution>
+                        <id>utilities-main</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+
+                        <configuration>
+
+                            <classifier>utilities-main</classifier>
+                            <archive>
+                                <manifest>
+                                    <mainClass>org.fcrepo.utilities.install.Installer</mainClass>
+                                </manifest>
+                            </archive>
+
+                            <includes>
+                                <include>org/fcrepo/utilities/**</include>
+                                <include>org/fcrepo/server/**</include>
+                                <include>**/fedorausers-mapping.xml</include>
+                                <include>**/webxml-mapping.xml</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                    
 
                     <execution>
                         <id>cli-loader-main</id>
