--- a/fcrepo-common/pom.xml
+++ b/fcrepo-common/pom.xml
@@ -323,6 +323,18 @@
       <groupId>org.slf4j</groupId>
       <artifactId>jcl-over-slf4j</artifactId>
     </dependency>
+    
+    <dependency>
+      <groupId>dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+      <version>1.6.1</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.fcrepo</groupId>
+      <artifactId>saxon</artifactId>
+      <version>9.0</version>
+    </dependency>
 
   </dependencies>
 </project>
