--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -584,7 +584,14 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-all</artifactId>
-            <version>5.1.0</version>
+            <version>5.4.2</version>
+        </dependency>
+        
+        <!-- xstream is an optional activemq dependency, required for Stomp -->
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.3.1</version>
         </dependency>
 
         <dependency>
