FCREPO-830: can use MAVEN_OPTS to set installer system properties

--- a/fcrepo-integrationtest/fcrepo-integrationtest-configQ/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configQ/pom.xml
@@ -63,6 +63,7 @@
         <fedora.home>${project.build.directory}/fcrepo-${project.version}</fedora.home>
         <fedora.install.properties>${project.build.directory}/test-classes/config/ConfigQ.properties</fedora.install.properties>
         <fedora.install.version>${project.version}</fedora.install.version>
+        <maven.opts>${env.MAVEN_OPTS}</maven.opts>
       </properties>
 
       <build>
