Integration tests fail if CATALINA_HOME is set
FEDORA_HOME etc are set in the poms, but not CATALINA_HOME, which means
TestCommandLineUtilities fails if CATLINA_HOME is already set.  Modified
poms to set CATALINA_HOME.

--- a/fcrepo-integrationtest/fcrepo-integrationtest-configQ/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configQ/pom.xml
@@ -338,6 +338,7 @@
           <environmentVariables>
             <FEDORA_HOME>${fedora.home}</FEDORA_HOME>
             <WEBAPP_NAME>${fedora.appServerContext}</WEBAPP_NAME>
+            <CATALINA_HOME>${tomcat.home}</CATALINA_HOME>
           </environmentVariables>
 
         </configuration>
