FCREPO-804: Drop McKoi JDBC support
Removes all traces of McKoi support (JDBC driver, install option, DDLConverter)

https://jira.duraspace.org/browse/FCREPO-804

--- a/resources/server/org/fcrepo/utilities/install/OptionDefinition.properties
+++ b/resources/server/org/fcrepo/utilities/install/OptionDefinition.properties
@@ -128,10 +128,10 @@ keystore.type.defaultValue = JKS
 
 database.label = Database
 database.description = Please select the database you will be using with   \n\
-Fedora. The supported databases are Derby, McKoi, MySQL, Oracle and Postgres.     \n\
+Fedora. The supported databases are Derby, MySQL, Oracle and Postgres.     \n\
 If you do not have a database ready for use by Fedora or would prefer to   \n\
 use the embedded version of Derby bundled with Fedora, enter 'included'.
-database.validValues = derby mckoi mysql oracle postgresql included
+database.validValues = derby mysql oracle postgresql included
 
 database.update.label = Rename database table
 database.update.description = \
@@ -150,13 +150,6 @@ Enter the database username Fedora will use to connect to the Fedora database.
 database.password.label = Database password
 database.password.description = \
 Enter the database password Fedora will use to connect to the Fedora database.
-
-database.mckoi.driver.label = McKoi JDBC driver
-database.mckoi.driver.description = \
-You may either use the included JDBC driver or your own copy.              \n\
-Enter 'included' to use the included JDBC driver, or, enter the location   \n\
-(full path) of the driver.
-database.mckoi.driver.defaultValue = included
 
 database.derby.driver.label = Derby JDBC driver
 database.derby.driver.description = \
@@ -184,16 +177,6 @@ You may either use the included JDBC driver or your own copy.              \n\
 Enter 'included' to use the included JDBC driver, or, enter the location   \n\
 (full path) of the driver.
 database.postgresql.driver.defaultValue = included
-
-database.mckoi.jdbcURL.label = JDBC URL
-database.mckoi.jdbcURL.description = \
-Please enter the JDBC URL.
-database.mckoi.jdbcURL.defaultValue = jdbc:mckoi://localhost:9157/
-
-database.mckoi.jdbcDriverClass.label = JDBC URL
-database.mckoi.jdbcDriverClass.description = \
-Please enter the JDBC driver class.
-database.mckoi.jdbcDriverClass.defaultValue = com.mckoi.JDBCDriver
 
 database.derby.jdbcURL.label = JDBC URL
 database.derby.jdbcURL.description = \
