added test messages

--- a/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
@@ -380,6 +380,7 @@
             <FEDORA_HOME>${fedora.home}</FEDORA_HOME>
             <WEBAPP_NAME>${fedora.appServerContext}</WEBAPP_NAME>
             <CATALINA_HOME>${tomcat.home}</CATALINA_HOME>
+            <PEP_NOCACHE>true</PEP_NOCACHE>
           </environmentVariables>
 
         </configuration>
