FCREPO-576: Remove DBXML or make it optional dependency
Update pop to include xmldb api; update pom to set PEP_NOCACHE environment
variable required for testing.

--- a/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
@@ -411,6 +411,8 @@
             <FEDORA_HOME>${fedora.home}</FEDORA_HOME>
             <WEBAPP_NAME>${fedora.appServerContext}</WEBAPP_NAME>
             <CATALINA_HOME>${tomcat.home}</CATALINA_HOME>
+            <!-- disables FeSL xacml result caching, tests won't pass without this -->
+            <PEP_NOCACHE>true</PEP_NOCACHE>
           </environmentVariables>
 
         </configuration>
