--- a/fcrepo-common/pom.xml
+++ b/fcrepo-common/pom.xml
@@ -336,5 +336,11 @@
       <version>9.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 </project>
