--- a/fcrepo-webapp/fcrepo-webapp-fedora/pom.xml
+++ b/fcrepo-webapp/fcrepo-webapp-fedora/pom.xml
@@ -176,6 +176,31 @@
       <artifactId>fcrepo-server</artifactId>
       <version>${project.version}</version>
     </dependency>
+    
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>3.0.3.RELEASE</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>3.0.3.RELEASE</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>3.0.3.RELEASE</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>3.0.3.RELEASE</version>
+    </dependency>
+    
 
     <dependency>
       <groupId>org.fcrepo</groupId>
