FCREPO-838 & FCREPO-839: Allow both parent-child and child-parent relationships
RIRelationshipResolver based on querying resource index; child-parent and
parent-child relationships specified in config-melcoe-pep.xml; test case added
to match hierarchical collection policy using range of relationships.

--- a/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
@@ -350,6 +350,7 @@
                 <include>**/TestMisplacedNamespace.class</include>
                 <include>**/TestREST.class</include>
                 <include>**/TestPolicies.class</include>
+                <include>**/TestHierarchy.class</include>
                 <include>**/TestPolicyIndex.class</include>
 
               </includes>
