--- a/fcrepo-installer/pom.xml
+++ b/fcrepo-installer/pom.xml
@@ -319,6 +319,12 @@
       <artifactId>xmlunit</artifactId>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.0.1</version>
+    </dependency>
 
   </dependencies>
 </project>
