--- a/fcrepo-webapp/fcrepo-webapp-fedora/pom.xml
+++ b/fcrepo-webapp/fcrepo-webapp-fedora/pom.xml
@@ -20,11 +20,9 @@
         <executions>
 
           <execution>
-            <!--
-              update axis' configuration file (server-config.wsdd)
-              requires that the java files are compiled thus, perform
-              this task in the "process-classes" phase
-            -->
+            <!-- update axis' configuration file (server-config.wsdd) requires 
+              that the java files are compiled thus, perform this task in the "process-classes" 
+              phase -->
             <id>Update server-config.wsdd</id>
             <phase>process-classes</phase>
             <configuration>
@@ -38,7 +36,7 @@
                   <arg
                     value="${basedir}/../../fcrepo-common/target/generated-sources/axistools/wsdl2java/org/fcrepo/server/access/deploy.wsdd" />
                   <sysproperty key="logback.configurationFile"
-                    value="${basedir}/src/test/resources/logback.xml"/>
+                    value="${basedir}/src/test/resources/logback.xml" />
                 </java>
               </tasks>
             </configuration>
@@ -120,10 +118,8 @@
           <instructions>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Bundle-Version>${project.version}</Bundle-Version>
-            <!--
-              | assume public classes are in the top package, and
-              private classes are under ".internal"
-            -->
+            <!-- | assume public classes are in the top package, and private 
+              classes are under ".internal" -->
             <Bundle-ClassPath>.,WEB-INF/classes</Bundle-ClassPath>
             <Embed-Directory>WEB-INF/lib</Embed-Directory>
             <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
@@ -153,10 +149,8 @@
 
 
 
-            <!--
-              | each module can override these defaults in their
-              osgi.bnd file
-            -->
+            <!-- | each module can override these defaults in their osgi.bnd 
+              file -->
             <_include>-osgi.bnd</_include>
           </instructions>
         </configuration>
@@ -176,48 +170,59 @@
       <artifactId>fcrepo-server</artifactId>
       <version>${project.version}</version>
     </dependency>
-    
+
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-web</artifactId>
       <version>3.0.3.RELEASE</version>
     </dependency>
-    
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
       <version>3.0.3.RELEASE</version>
     </dependency>
-    
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
       <version>3.0.3.RELEASE</version>
     </dependency>
-    
+
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-config</artifactId>
       <version>3.0.3.RELEASE</version>
     </dependency>
-    
 
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>fcrepo-security-jaas</artifactId>
       <version>${project.version}</version>
     </dependency>
-    
+
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>fcrepo-security-pdp</artifactId>
       <version>${project.version}</version>
     </dependency>
-    
+
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>fcrepo-security-pep</artifactId>
       <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.15</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>9.0-801.jdbc4</version>
     </dependency>
   </dependencies>
 
