Add some relationships methods tests to TestRESTAPI
There was no testing of these methods for the REST API

--- a/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-configC/pom.xml
@@ -323,6 +323,7 @@
                 <include>**/TestAPIA.class</include>
                 <include>**/TestAPIALite.class</include>
                 <include>**/TestAPIM.class</include>
+                <include>**/TestRelationships.class</include>
                 <include>**/TestAPIMLite.class</include>
                 <include>**/TestAuthentication.class</include>
                 <include>**/TestHTTPStatusCodesConfigC.class</include>
