--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -635,7 +635,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
-      <version>3.0.3.RELEASE</version>
+      <version>${spring.version}</version>
       <exclusions>
         <exclusion>
           <groupId>commons-logging</groupId>
@@ -646,7 +646,7 @@
     <dependency>
     	<groupId>org.springframework</groupId>
     	<artifactId>spring-context</artifactId>
-    	<version>3.0.3.RELEASE</version>
+    	<version>${spring.version}</version>
     	<type>jar</type>
     	<scope>compile</scope>
     	<exclusions>
@@ -659,7 +659,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
-      <version>3.0.3.RELEASE</version>
+      <version>${spring.version}</version>
       <exclusions>
         <exclusion>
           <groupId>commons-logging</groupId>
