--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
     <integration.test.skip>false</integration.test.skip>
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss 'UTC'Z</maven.build.timestamp.format>                                                                     
     <timestamp>${maven.build.timestamp}</timestamp>
+    <abdera.version>1.1</abdera.version>
+    <axiom.version>1.2.8</axiom.version>
+    <derby.version>10.5.3.0_1</derby.version>
+    <jersey.version>1.0.3.1</jersey.version>
+    <spring.version>3.0.3.RELEASE</spring.version>
   </properties>
 
   <dependencyManagement>
@@ -123,12 +128,12 @@
       <dependency>
         <groupId>com.sun.jersey</groupId>
         <artifactId>jersey-bundle</artifactId>
-        <version>1.0.3.1</version>
+        <version>${jersey.version}</version>
       </dependency>
       <dependency>
         <groupId>com.sun.jersey.contribs</groupId>
         <artifactId>jersey-multipart</artifactId>
-        <version>1.0.3.1</version>
+        <version>${jersey.version}</version>
       </dependency>
       <dependency>
         <groupId>commons-httpclient</groupId>
@@ -149,7 +154,7 @@
       <dependency>
         <groupId>org.apache.abdera</groupId>
         <artifactId>abdera-core</artifactId>
-        <version>1.1</version>
+        <version>${abdera.version}</version>
         <exclusions>
           <exclusion>
             <groupId>commons-logging</groupId>
@@ -160,7 +165,7 @@
       <dependency>
         <groupId>org.apache.abdera</groupId>
         <artifactId>abdera-i18n</artifactId>
-        <version>1.1</version>
+        <version>${abdera.version}</version>
         <exclusions>
           <exclusion>
             <groupId>commons-logging</groupId>
@@ -171,7 +176,7 @@
       <dependency>
         <groupId>org.apache.abdera</groupId>
         <artifactId>abdera-parser</artifactId>
-        <version>1.1</version>
+        <version>${abdera.version}</version>
         <exclusions>
           <exclusion>
             <groupId>org.codehaus.woodstox</groupId>
@@ -186,7 +191,7 @@
       <dependency>
         <groupId>org.apache.abdera</groupId>
         <artifactId>abdera-extensions-main</artifactId>
-        <version>1.1</version>
+        <version>${abdera.version}</version>
         <exclusions>
           <exclusion>
             <groupId>org.apache.abdera</groupId>
@@ -197,17 +202,17 @@
       <dependency>
         <groupId>org.apache.derby</groupId>
         <artifactId>derby</artifactId>
-        <version>10.5.3.0_1</version>
+        <version>${derby.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.derby</groupId>
         <artifactId>derbyclient</artifactId>
-        <version>10.5.3.0_1</version>
+        <version>${derby.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.ws.commons.axiom</groupId>
         <artifactId>axiom-api</artifactId>
-        <version>1.2.8</version>
+        <version>${axiom.version}</version>
         <exclusions>
           <exclusion>
             <groupId>commons-logging</groupId>
@@ -218,7 +223,7 @@
       <dependency>
         <groupId>org.apache.ws.commons.axiom</groupId>
         <artifactId>axiom-impl</artifactId>
-        <version>1.2.8</version>
+        <version>${axiom.version}</version>
         <exclusions>
           <exclusion>
             <groupId>org.codehaus.woodstox</groupId>
