FCREPO-924: Update Spring
Update Spring libraries from 3.0.3.RELEASE to 3.0.5.RELEASE

https://jira.duraspace.org/browse/FCREPO-924

--- a/fcrepo-webapp/fcrepo-webapp-fedora/pom.xml
+++ b/fcrepo-webapp/fcrepo-webapp-fedora/pom.xml
@@ -174,25 +174,21 @@
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-web</artifactId>
-      <version>3.0.3.RELEASE</version>
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>3.0.3.RELEASE</version>
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-      <version>3.0.3.RELEASE</version>
     </dependency>
 
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-config</artifactId>
-      <version>3.0.3.RELEASE</version>
     </dependency>
 
     <dependency>
@@ -224,6 +220,19 @@
       <artifactId>postgresql</artifactId>
       <version>9.0-801.jdbc4</version>
     </dependency>
+        
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    
   </dependencies>
 
 </project>
