--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,7 @@
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss 'UTC'Z</maven.build.timestamp.format>                                                                     
     <timestamp>${maven.build.timestamp}</timestamp>
     <abdera.version>1.1.2</abdera.version>
+    <activemq.version>5.5.0</activemq.version>
     <axiom.version>1.2.10</axiom.version>
     <derby.version>10.7.1.1</derby.version>
     <jersey.version>1.0.3.1</jersey.version>
@@ -198,6 +199,11 @@
             <artifactId>abdera-client</artifactId>
           </exclusion>
         </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.activemq</groupId>
+        <artifactId>activemq-all</artifactId>
+        <version>${activemq.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.derby</groupId>
