updates to configA and configC

--- a/fcrepo-integrationtest/fcrepo-integrationtest-core/src/main/resources/config/ConfigA.properties
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-core/src/main/resources/config/ConfigA.properties
@@ -29,6 +29,7 @@ database.password=fedoraAdmin
 database.username=fedoraAdmin
 fedora.admin.pass=fedoraAdmin
 deploy.local.services=true
+test.spring.configs=true
 ssl.available=true
 keystore.file=included
 install.type=custom
