--- a/fcrepo-integrationtest/fcrepo-integrationtest-core/src/main/resources/config/ConfigC.properties
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-core/src/main/resources/config/ConfigC.properties
@@ -31,6 +31,7 @@ database.password=fedoraAdmin
 database.username=fedoraAdmin
 fedora.admin.pass=fedoraAdmin
 deploy.local.services=true
+test.spring.configs=true
 ssl.available=true
 keystore.file=included
 install.type=custom
