trippi 1.5.4 changes to RDF parsing into TripleIterator

--- a/fcrepo-client/pom.xml
+++ b/fcrepo-client/pom.xml
@@ -12,6 +12,15 @@
   <packaging>pom</packaging>
   <name>All Fedora Clients</name>
 
+  <dependencies>
+  	<dependency>
+  		<groupId>org.fcrepo</groupId>
+  		<artifactId>trippi-core</artifactId>
+  		<version>1.5.4</version>
+  		<type>pom</type>
+  		<scope>compile</scope>
+  	</dependency>
+  </dependencies>
   <modules>
     <module>fcrepo-client-admin</module>
     <module>fcrepo-client-messaging</module>
