--- a/fcrepo-client/fcrepo-client-admin/pom.xml
+++ b/fcrepo-client/fcrepo-client-admin/pom.xml
@@ -202,6 +202,8 @@
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>trippi-core</artifactId>
+      <version>1.5.4</version>
+      <type>pom</type>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
